--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../../static/css/login/background.css"/>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="../../static/css/login/background.css" th:href="@{/css/login/background.css}" />
 	</head>
 	
 	<body>
-		<div id="particles"></div>
+		<div id="particles" th:text="${title}"></div>
 		<script src="https://cdn.bootcss.com/particles.js/2.0.0/particles.min.js"></script>
-		<script type="text/javascript" src="../../static/js/login/background.js"></script>
+		<script type="text/javascript" src="../../static/js/login/background.js" th:src="@{/resource/js/login/background.js}" ></script>
 	</body>
 </html>
